ingress/deploy-path2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodeapp-path2
  namespace: default
  labels:
    app: nodeapp2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp2
  template:
    metadata:
      name: nodeapp-path2
      labels:
        app: nodeapp2
    spec:
      containers:
      - name: nodeapp2
        image: stepanowon/nodeapp-path2:1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
