ingress/svc-nodeapp1.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeapp1
  namespace: default
  labels:
    app: nodeapp1
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: nodeapp1
