ingress/svc-nodeapp2.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeapp2
  namespace: default
  labels:
    app: nodeapp2
spec:
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: nodeapp2
